2010-12-16  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Fix PIC flags with MPI wrappers using Portland on GNU/Linux.
	* libltdl/m4/libtool.m4 (_LT_COMPILER_PIC) [linux]:
	Match Portland compilers also using $CC -V output, to avoid
	false negatives with MPI compiler drivers.
	Report by Christian Rössel.

	* libltdl/m4/libtool.m4 (_LT_SETUP): Fix quoting for
	PATH_SEPARATOR.

2010-12-15  KO Myung-Hun  <komh@chollian.net>  (tiny change)
	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Fix PATH_SEPARATOR handling for OS/2.
	* Makefile.am (update_mans): Quote $(PATH_SEPARATOR).
	* libltdl/m4/libtool.m4 (_LT_SETUP): Add _LT_DECL for
	PATH_SEPARATOR.
	* libltdl/config/general.m4sh: Use PATH_SEPARATOR when computing
	$progpath.
	* THANKS: Update.

2010-12-10  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Fix nvcc PIC setting on darwin.
	* libltdl/m4/libtool.m4 (_LT_COMPILER_PIC)
	<lt_prog_compiler_pic>: Prepend -Xcompiler to nonempty variable
	setting rather than hard-coding -Xcompiler -fPIC, for darwin.
	* NEWS, THANKS: Update.
	Report by Paweł Daniluk.

	Honor $AUTOCONF, $AUTOMAKE in --help output.
	* libltdl/config/getopt.m4sh (func_help): Use $AUTOCONF and
	$AUTOMAKE if set, for --version outout.

	docs: Libtool configuration diagram.
	* doc/libtool.texi (Integrating libtool): Add diagrams
	explaining the dependencies between Libtool files.
	Suggestion by Ethan Mallove.

2010-11-15  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Eliminate hardcode_libdir_flag_spec_ld tag variable.
	* libltdl/config/ltmain.m4sh (func_mode_link): Set $wl to empty
	if $LD is used for creating shared libraries.  Do not use
	hardcode_libdir_flag_spec_ld any more.
	* libltdl/m4/libtool.m4 (_LT_LINKER_SHLIBS, _LT_LANG_CXX_CONFIG)
	(_LT_LANG_F77_CONFIG, _LT_LANG_FC_CONFIG, _LT_SYS_DYNAMIC_LINKER)
	<hardcode_libdir_flag_spec_ld>: Remove all instances of the tag
	variable.
	(_LT_LINKER_SHLIBS) [linux, xlf] <hardcode_libdir_flag_spec>:
	Set variable, including ${wl}.  Fixes hardcoding in programs